# MotorScan

./: CMakeLists.txt  MotorScan.desktop  MotorScanMX.pro  axis.cpp  axis.h  axis.ui  graph.cpp  graph.h  graph.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mocui.h  scanmx.qrc  script.cpp  script.h
